--- a/comment.html
+++ b/comment.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>留言</title>
+	
 </head>
 <body>
 <h1 style="color:blue">~留言~</h1>
@@ -11,6 +12,7 @@
 <p>
 <a href="introduction.html">自我介紹</a>
 </p>
+	<p style="color:brown;">哈囉我超雷不會用git hub,謝謝你教我怎麼用呵呵呵。挖塞就這樣30個字了ya</p>
 
 </body>
 </html>
